--- a/template-csharp-blog/template-csharp-blog/Views/Home/Index.cshtml
+++ b/template-csharp-blog/template-csharp-blog/Views/Home/Index.cshtml
@@ -2,7 +2,10 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="Welcome">
+    <h1 class="title">Welcome to <br /> <strong> <emp> </emp>TV Shows Blog!</strong></h1>
+    <p class="mainpageP">The start of television started in the late 1920's, however it wasn't until the 1940's did TV Shows really start to gain popularity.<br />
+
+    Nowadays, it's still a favorite pastime, though there are a lot more options then what was being aired in the past.<br /> <br /> <br /> <strong>What are your favorite shows?</strong>  </p>
+  
 </div>
