Blog project from classroom to personal

--- a/template-csharp-blog/template-csharp-blog/Views/Category/Index.cshtml
+++ b/template-csharp-blog/template-csharp-blog/Views/Category/Index.cshtml
@@ -1,11 +1,11 @@
-﻿@model IEnumerable<template_csharp_blog.Models.Catagory>
+﻿@model IEnumerable<template_csharp_blog.Models.Category>
 
 @{
     ViewData["Title"] = "Index";
 }
 <body class="Allpage">
 
-<h1>Catagories</h1>
+<h1>Categories</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
