--- a/template-csharp-blog/template-csharp-blog/Views/Shared/_Layout.cshtml
+++ b/template-csharp-blog/template-csharp-blog/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Platform" asp-action="Index">Platform</a>
                         </li>
                          <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Catagory" asp-action="Index">Catagory</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Category" asp-action="Index">Category</a>
                             </li>
                          
                     </ul>
