--- a/template-csharp-blog/template-csharp-blog/Views/Category/Delete.cshtml
+++ b/template-csharp-blog/template-csharp-blog/Views/Category/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model template_csharp_blog.Models.Catagory
+﻿@model template_csharp_blog.Models.Category
 
 @{
     ViewData["Title"] = "Delete";
@@ -9,7 +9,7 @@
 
 <h3 class="delete">Are you sure you want to delete this?</h3>
 <div>
-    <h4>Catagory</h4>
+    <h4>Category</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
