--- a/template-csharp-blog/template-csharp-blog/Views/Category/Details.cshtml
+++ b/template-csharp-blog/template-csharp-blog/Views/Category/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model template_csharp_blog.Models.Catagory
+﻿@model template_csharp_blog.Models.Category
 
 @{
     ViewData["Title"] = "Details";
@@ -7,7 +7,7 @@
 <h1>Details</h1>
 
 <div>
-    <h4>Catagory</h4>
+    <h4>Category</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
