--- a/template-csharp-blog/template-csharp-blog/Views/Category/Update.cshtml
+++ b/template-csharp-blog/template-csharp-blog/Views/Category/Update.cshtml
@@ -1,4 +1,4 @@
-﻿@model template_csharp_blog.Models.Catagory
+﻿@model template_csharp_blog.Models.Category
 
 @{
     ViewData["Title"] = "Update";
@@ -6,7 +6,7 @@
 <body class="Allpage">
 <h1>Update</h1>
 
-<h4>Catagory</h4>
+<h4>Category</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
