--- a/template-csharp-blog/template-csharp-blog/Views/Post/Create.cshtml
+++ b/template-csharp-blog/template-csharp-blog/Views/Post/Create.cshtml
@@ -18,8 +18,8 @@
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Catagory" class="control-label"></label>
-                <select asp-for="CatagoryId" class ="form-control" asp-items="ViewBag.catagories"></select>
+                <label asp-for="Categories" class="control-label"></label>
+                <select asp-for="CategoryId" class ="form-control" asp-items="ViewBag.categories"></select>
             </div>
             <div class="form-group">
                 <label asp-for="Author" class="control-label"></label>
