--- a/template-csharp-blog/template-csharp-blog/Views/Post/Details.cshtml
+++ b/template-csharp-blog/template-csharp-blog/Views/Post/Details.cshtml
@@ -17,10 +17,10 @@
             @Html.DisplayFor(model => model.Title)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Catagory)
+            @Html.DisplayNameFor(model => model.Categories)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Catagory.Id)
+            @Html.DisplayFor(model => model.Categories.Id)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Author)
