--- a/template-csharp-blog/template-csharp-blog/Views/Post/Index.cshtml
+++ b/template-csharp-blog/template-csharp-blog/Views/Post/Index.cshtml
@@ -16,7 +16,7 @@
                 @Html.DisplayNameFor(model => model.Title)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Catagory)
+                @Html.DisplayNameFor(model => model.Categories)
              
             </th>
             <th>
@@ -47,7 +47,7 @@
                 @Html.DisplayFor(modelItem => item.Title)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Catagory.Name)
+                @Html.DisplayFor(modelItem => item.Categories.Name)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Author)
