--- a/template-csharp-blog/template-csharp-blog/Views/Post/Update.cshtml
+++ b/template-csharp-blog/template-csharp-blog/Views/Post/Update.cshtml
@@ -19,9 +19,9 @@
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Catagory" class="control-label"></label>
-                <select asp-for="CatagoryId" class="form-control" asp-items="ViewBag.catagories"></select>
-                <span asp-validation-for="CatagoryId" class="text-danger"></span>
+                <label asp-for="Categories" class="control-label"></label>
+                <select asp-for="CategoryId" class="form-control" asp-items="ViewBag.categories"></select>
+                <span asp-validation-for="CategoryId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Author" class="control-label"></label>
